# swgoh-recommend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  abilities.json  characters.json  docker-compose.comlink.yml  docker-compose.yml  download.json  gear.json  pyproject.toml  ships.json
scripts/: refresh_abilities.py  refresh_factions.py  refresh_gear.py  refresh_ship_data.py  refresh_unit_names.py
src/swgoh/: __init__.py  abilities.py  config.py  factions.py  gear.py  history.py  models.py  names.py  service.py  ships.py
src/swgoh/data/: ability_data.json  defense_targets.yaml  farm_locations.yaml  fleet_targets.yaml  gear_names.json  gear_requirements.json  priority_characters.yaml  raid_targets.yaml  ship_data.json  squad_targets.yaml  tb_platoons.yaml  unit_factions.json  unit_names.json
src/swgoh/recommend/: __init__.py  defense.py  energy.py  fleet.py  gear.py  goals.py  guild.py  mods.py  plan.py  relics.py  slicing.py  squads.py  zetas.py
src/swgoh/sources/: __init__.py  base.py  cache.py  comlink.py  swgoh_gg.py
src/swgoh/web/: app.py  charts.py
src/swgoh/web/templates/: base.html  dashboard.html  defense.html  energy.html  error.html  fleet.html  gear.html  guild.html  relics.html  setup.html  squads.html  tonight.html  zetas.html
tests/: conftest.py  test_board.py  test_charts.py  test_comlink_parse.py  test_defense.py  test_energy.py  test_factions.py  test_fleet.py  test_gear.py  test_guild.py  test_history.py  test_mods.py  test_plan.py  test_relics.py  test_slicing.py  test_squads.py  test_swgoh_gg_parse.py  test_zetas.py
